--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "discord.js": "^14.14.1",
     "dota2-fork": "^7.1.4",
     "dotenv": "^16.6.1",
+    "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "passport": "^0.7.0",
+    "passport-steam": "^1.0.18",
     "sql.js": "^1.10.3",
     "sqlite3": "^5.1.7",
     "steam-user": "^5.2.3",
@@ -30,7 +34,11 @@
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
+    "@types/express": "^5.0.4",
+    "@types/express-session": "^1.18.2",
     "@types/node": "^20.10.6",
+    "@types/passport": "^1.0.17",
+    "@types/passport-steam": "^1.0.6",
     "@types/sql.js": "^1.4.9",
     "@types/uuid": "^11.0.0",
     "ts-node": "^10.9.2",
